style: fix mobile layout problem

--- a/src/components/Contact/styles.module.scss
+++ b/src/components/Contact/styles.module.scss
@@ -11,16 +11,16 @@
 
     &:last-child {
       p {
-        padding-left: 2rem;
+        padding-left: 1rem;
       }
     }
 
     .link {
       display: flex;
       align-items: center;
-      gap: 1rem;
+      gap: 0.8rem;
       color: var(--lighter);
-      font-size: 2rem;
+      font-size: 1.5rem;
       padding: 2rem 0.2rem;
       position: relative;
       cursor: pointer;
