--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -5,6 +5,7 @@
   .sections {
     display: flex;
     position: relative;
+    font-size: 0.75rem;
 
     .section {
       flex: 1 0 0%;
@@ -25,12 +26,12 @@
   }
 
   .foot {
-    padding-block: 1.5rem;
+    padding-block: 1rem;
     color: white;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    font-size: 0.8rem;
+    font-size: 0.6rem;
 
     div {
       display: flex;
